--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>cloud.log UI</title><link rel="stylesheet" href="/ui.42dd6200.css"><link rel="stylesheet" href="/ui.579e5801.css"></head><body> <script src="/ui.99bfbf8e.js"></script>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>cloud.log UI</title><link rel="stylesheet" href="/ui.42dd6200.css"><link rel="icon" type="image/png" href="/favicon4.dcc8b7a8.png"><link rel="stylesheet" href="/ui.579e5801.css"></head><body> <script src="/ui.d8ed8f4a.js"></script>
 </body></html>
