--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>cloud.log UI</title><link rel="stylesheet" href="/ui.42dd6200.css"><link rel="icon" type="image/png" href="/favicon4.dcc8b7a8.png"><link rel="stylesheet" href="/ui.579e5801.css"></head><body> <script src="/ui.7af2aa66.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>cloud.log UI</title><link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/railscasts.css"><link rel="stylesheet" href="/ui.56456dd8.css"><link rel="icon" type="image/png" href="/favicon4.dcc8b7a8.png"></head><body> <div id="root"></div> <script src="/ui.cd79bd57.js"></script> </body></html>
